# mGine

./: CMakeLists.txt  LICENSE  README.md
engine/: framework.cpp  framework.hpp  shapes.hpp
engine/basic/: drawable.cpp  drawable.hpp  shapes.hpp
mgine/: mgine.cpp  mgine.hpp  sdl_colors.hpp
mgine/basic/: drawable.cpp  drawable.hpp
mgine/debug/: console.cpp  console.hpp  performance.hpp
src/: main.cpp
